--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "prettier": "3.2.5"
   },
   "scripts": {
-    "dev": "npx @marp-team/marp-cli -s ./src",
+    "start": "npx @marp-team/marp-cli -s ./src",
     "pptx": "npx @marp-team/marp-cli ./src --pptx --theme-set ./styles/*.css --allow-local-files",
     "pdf": "npx @marp-team/marp-cli ./src --pdf --theme-set ./styles/*.css --allow-local-files --pdf-outlines"
   }
